<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">



    <ImageButton
        android:id="@+id/fechaInicioBtnId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/ic_init_date" />

    <ImageButton
        android:id="@+id/fechaFinalBtnId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        app:layout_constraintBottom_toBottomOf="@+id/fechaInicioBtnId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fechaInicioBtnId"
        app:srcCompat="@drawable/ic_init_date" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fecha_inicio"
        app:layout_constraintEnd_toEndOf="@+id/fechaInicioBtnId"
        app:layout_constraintStart_toStartOf="@+id/fechaInicioBtnId"
        app:layout_constraintTop_toBottomOf="@+id/fechaInicioBtnId" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fecha_final"
        app:layout_constraintEnd_toEndOf="@+id/fechaFinalBtnId"
        app:layout_constraintStart_toStartOf="@+id/fechaFinalBtnId"
        app:layout_constraintTop_toBottomOf="@+id/fechaFinalBtnId" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/selecciona_un_rango_de_fechas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nuevaConsultaBtnId"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@color/colorPrimary"
        android:text="@string/nueva_consulta"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/resultadosAnterioresBtnId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/resultadosAnterioresBtnId"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@android:color/darker_gray"
        android:text="@string/resultados_anteriores"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/magnitudId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="ESCRIBE LA MAGNITUD"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/textView3"/>


</androidx.constraintlayout.widget.ConstraintLayout>